fix: fix scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,6 @@ main {
   gap: 20px;
   margin: 2rem 3rem;
   min-height: 0;
-  overflow: auto;
 }
 
 main > .eating-place-top-section {
@@ -18,6 +17,11 @@ main > .eating-place-top-section {
   display: flex;
   gap: 13px;
 }
+
+.eating-place-bottom-section {
+  overflow-y: scroll;
+}
+
 .eating-place-bottom-section .eating-place-select {
   display: flex;
 }
@@ -34,9 +38,9 @@ main > .eating-place-top-section {
   }
 }
 
-.eating-place-list::-webkit-scrollbar {
+/* .eating-place-list::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .eating-place-list {
   display: flex;
@@ -44,7 +48,6 @@ main > .eating-place-top-section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: scroll;
 }
 
 .eating-place-list-item img {
